to continue tomorrow

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -11,25 +11,94 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[<div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"change,deep-thoughts,thinking,world\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/change/page/1/\">change</a>\n",
+                        "<a class=\"tag\" href=\"/tag/deep-thoughts/page/1/\">deep-thoughts</a>\n",
+                        "<a class=\"tag\" href=\"/tag/thinking/page/1/\">thinking</a>\n",
+                        "<a class=\"tag\" href=\"/tag/world/page/1/\">world</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"abilities,choices\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/abilities/page/1/\">abilities</a>\n",
+                        "<a class=\"tag\" href=\"/tag/choices/page/1/\">choices</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"inspirational,life,live,miracle,miracles\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>\n",
+                        "<a class=\"tag\" href=\"/tag/life/page/1/\">life</a>\n",
+                        "<a class=\"tag\" href=\"/tag/live/page/1/\">live</a>\n",
+                        "<a class=\"tag\" href=\"/tag/miracle/page/1/\">miracle</a>\n",
+                        "<a class=\"tag\" href=\"/tag/miracles/page/1/\">miracles</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"aliteracy,books,classic,humor\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/aliteracy/page/1/\">aliteracy</a>\n",
+                        "<a class=\"tag\" href=\"/tag/books/page/1/\">books</a>\n",
+                        "<a class=\"tag\" href=\"/tag/classic/page/1/\">classic</a>\n",
+                        "<a class=\"tag\" href=\"/tag/humor/page/1/\">humor</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"be-yourself,inspirational\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/be-yourself/page/1/\">be-yourself</a>\n",
+                        "<a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"adulthood,success,value\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/adulthood/page/1/\">adulthood</a>\n",
+                        "<a class=\"tag\" href=\"/tag/success/page/1/\">success</a>\n",
+                        "<a class=\"tag\" href=\"/tag/value/page/1/\">value</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"life,love\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/life/page/1/\">life</a>\n",
+                        "<a class=\"tag\" href=\"/tag/love/page/1/\">love</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"edison,failure,inspirational,paraphrased\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/edison/page/1/\">edison</a>\n",
+                        "<a class=\"tag\" href=\"/tag/failure/page/1/\">failure</a>\n",
+                        "<a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>\n",
+                        "<a class=\"tag\" href=\"/tag/paraphrased/page/1/\">paraphrased</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"misattributed-eleanor-roosevelt\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/misattributed-eleanor-roosevelt/page/1/\">misattributed-eleanor-roosevelt</a>\n",
+                        "</div>, <div class=\"tags\">\n",
+                        "            Tags:\n",
+                        "            <meta class=\"keywords\" content=\"humor,obvious,simile\" itemprop=\"keywords\"/>\n",
+                        "<a class=\"tag\" href=\"/tag/humor/page/1/\">humor</a>\n",
+                        "<a class=\"tag\" href=\"/tag/obvious/page/1/\">obvious</a>\n",
+                        "<a class=\"tag\" href=\"/tag/simile/page/1/\">simile</a>\n",
+                        "</div>]\n"
+                    ]
+                }
+            ],
             "source": [
-                "import os\n",
-                "from sqlalchemy import create_engine\n",
-                "import pandas as pd\n",
-                "from dotenv import load_dotenv\n",
+                "from bs4 import BeautifulSoup\n",
+                "import requests \n",
                 "\n",
-                "# load the .env file variables\n",
-                "load_dotenv()\n",
+                "URL = \"https://quotes.toscrape.com\"\n",
                 "\n",
-                "# 1) Connect to the database here using the SQLAlchemy's create_engine function\n",
+                "page_html = requests.get(URL).text\n",
                 "\n",
-                "# 2) Execute the SQL sentences to create your tables using the SQLAlchemy's execute function\n",
+                "soup = BeautifulSoup(page_html)\n",
                 "\n",
-                "# 3) Execute the SQL sentences to insert your data using the SQLAlchemy's execute function\n",
                 "\n",
-                "# 4) Use pandas to print one of the tables as dataframes using read_sql function\n"
+                "#mydivs = soup.find_all(\"div\", {\"class\": \"tags\"})\n",
+                "#print(mydivs)\n",
+                "\n",
+                "tag_list = []\n",
+                "for tag_div in soup.find_all(\"div\", class=\"tags\"):\n",
+                "    for tag_a in tag_div.f\n"
             ]
         }
     ],
