--- a/src/tesla.ipynb
+++ b/src/tesla.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Price Revenue\n",
+      "          Date Revenue\n",
       "0   2023-12-31   25167\n",
       "1   2023-09-30   23350\n",
       "2   2023-06-30   24927\n",
@@ -121,7 +121,7 @@
     "                revenues.append(revenue)\n",
     "\n",
     "# Create DataFrame\n",
-    "df = pd.DataFrame({\"Price\": dates, \"Revenue\": revenues})\n",
+    "df = pd.DataFrame({\"Date\": dates, \"Revenue\": revenues})\n",
     "\n",
     "# Print DataFrame\n",
     "print(df)\n",
